Update Flow Main page and fix some bug about render UI after login

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -26,6 +26,9 @@
       "dom"
     ],
     "paths": {
+      "@layout/*":[
+        "src/app/layout/*"
+      ],
       "@main/*": [
         "src/app/main/*"
       ],
